# classification-curves

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  clscurves.html  clscurves.plotter.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.circleci/: config.yml
.github/workflows/: pythonpackage.yml
clscurves/: __init__.py  config.py  confusion.py  covariance.py  generator.py  main.py  sampler.py
clscurves/plotter/: cost.py  dist.py  plotter.py  pr.py  prg.py  prob_calibration.py  rf.py  roc.py
clscurves/tests/: test_config.py  test_confusion.py
docs/source/: clscurves.plotter.rst  clscurves.rst  conf.py  index.rst  modules.rst
notebooks/: demo.ipynb  ellipse_hull.ipynb
