[tool.poetry]
name = "clscurves"
version = "0.0.1"
description = "Compute and plot bootstrapped performance curves for classification problems."
authors = ["Christopher Bryant <cbryant@berkeley.edu>"]
maintainers = ["Christopher Bryant <cbryant@berkeley.edu>"]
readme = "README.md"
repository = "https://github.com/chrismbryant/classification-curves"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
numpy = "^1.20.3"
pandas = "^1.2.4"
matplotlib = "^3.4.2"
scipy = "^1.6.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
